<resources>
    <string name="app_name">Atividade 4</string>
    <string name="text">Texto</string>
    <string name="send">Send</string>
    <string name="letter">Tamanho da letra</string>
    <string name="style">Estilo</string>
    <string name="color">Cor da letra</string>
    <string name="bold">Negrito</string>
    <string name="italic">Itálico</string>
    <string name="upper">Maiúscula</string>
    <string name="red">Vermelho</string>
    <string name="green">Verde</string>
    <string name="blue">Azul</string>
</resources>