<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="@dimen/margin"
            android:gravity="center"
            android:background="@color/white"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text"
                />
            <EditText
                android:id="@+id/mainInput"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                />
            <Button
                android:id="@+id/send"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/send"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/letter"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <SeekBar
            android:id="@+id/seekBar"
            android:max="80"
            android:min="10"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/size"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/style"
            />

        <CheckBox
            android:id="@+id/bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bold" />

        <CheckBox
            android:id="@+id/italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/italic" />

        <CheckBox
            android:id="@+id/upper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upper" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/color"
            />

        <RadioGroup
            android:id="@+id/radioColor"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioButtonColor1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/red" />

            <RadioButton
                android:id="@+id/radioButtonColor2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/green" />

            <RadioButton
                android:id="@+id/radioButtonColor3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/blue" />
        </RadioGroup>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>